apps/homebridge/homebridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge-svc
  namespace: homebridge
  labels:
    app-name: homebridge
    version: "${HOMEBRIDGE_VERSION}"
    component: home-automation-server
    hostNetwork: "yes"
    internal-service: "yes"
    managed-by: chynten
    created-by: chynten
spec:
  type: ClusterIP
  ports:
    - port: 8581
      targetPort: 8581
      name: tcp
  selector:
    app-name: homebridge
